<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:id="@+id/recipeImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:background="@android:color/black"
                    android:padding="6dp"
                    android:textStyle="bold"
                    android:text="@string/Area"
                    android:layout_gravity="bottom|start"
                    android:layout_margin="8dp" />

                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:background="@android:color/black"
                    android:padding="6dp"
                    android:textStyle="bold"
                    android:text="@string/Category"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="8dp" />
            </FrameLayout>

            <TextView
                android:id="@+id/ingredientsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ingredients"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients_example"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/instructionsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Instructions"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions_example"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="4dp" />

            <com.example.myrecipes_chardon_magaud.View.NutriScoreView
                android:id="@+id/nutriScoreView"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                />

            <Button
                android:id="@+id/favoriteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorite_want_add" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>